/***********************************************************************
 X3 ChangeLog

2006-07-24  Alex Schumann  <rubin@afternet.org>

	* src/proto-p10.c: dont burst channels with 0 users in them (which
	were created by alert discrims, most likely)

2006-07-23  Alex Schumann  <rubin@afternet.org>

	* x3.conf.example: Added chanserv "modes" to example - use to control
	what usermodes chanserv gets. Mainly for setting +d or not, if you
	have nef 1.0 'b:' lines setup.

2006-07-25  Neil Spierling  <sirvulcan@gmail.com>

	* src/nickserv.c: If theres no title set then the default title
	will therefore be the first part of hidden_host in x3.conf.example,
	so for consistency with opt_fakehost we will print this.

2006-07-25  Neil Spierling  <sirvulcan@gmail.com>

	* src/nickserv.c: The reason why theres no arg rubin is that
	if you want to print the fakehost then u dont specify an arg.
	This tells opt_fakehost to set fake to the current fakehost
	and pass it on to be printed.

2006-07-23  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: Add config file regex fakehost test + sanity
	checking in title as well (fixed).

	* src/mod-memoserv.c: Fixed crash bug in memosearv read. (check argc
	instead of argv[2]==null since argv's dont get set null.

2006-07-23  Neil Spierling  <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Fix to a crash/output corruption issue.

	* src/proto-p10.c: Host in topic supports sethost and fakehost
	now.

2006-07-21  Alex Schumann  <rubin@afternet.org>

	* src/proto-p10.c: Added support for irc_wallop, irc_squit,
	irc_connect, and added callbacks to handle connect failures and
	successes. (All prep for auto routing system) 

	* src/proto.h: Added support for irc_wallop, irc_squit,
	irc_connect, and added callbacks to handle connect failures and 
	successes. (All prep for auto routing system)

	* src/opserv.help: Help entries for auto routing system + fix typeo in
	routing example

	* src/hash.h: New structs for auto routing system
