@@ -1,6 +1,11 @@
 /***********************************************************************
  X3 ChangeLog
 
+2006-07-26  Alex Schumann  <rubin@afternet.org>
+	
+	* src/opserv.c: Fix crash when doing reroute if routing isnt
+	configured.
+
 2006-07-24  Alex Schumann  <rubin@afternet.org>
 
 	* src/proto-p10.c: dont burst channels with 0 users in them (which
